<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAF8">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginhint"
        android:id="@+id/textView2"
        android:layout_marginTop="100dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:hint="@string/email"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textColor="#C3C1BF" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/password"
        android:id="@+id/pass"
        android:layout_marginTop="20dp"
        android:textColor="#C3C1BF" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/login"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="#504C49"
        android:textColor="#C3C1BF" />

    <!--<com.github.clans.fab.FloatingActionButton-->
        <!--android:id="@+id/fab"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="bottom|right"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:layout_marginRight="8dp"-->
        <!--android:src="@drawable/ic_navigate_next_white_24dp"-->
        <!--app:fab_colorNormal="#B07D4A"-->
        <!--app:fab_colorPressed="#B07D4A"-->
        <!--app:fab_colorRipple="#99FFFFFF"-->
        <!--app:fab_showShadow="true"-->
        <!--app:fab_shadowColor="#B07D4A"-->
        <!--app:fab_shadowRadius="4dp"-->
        <!--app:fab_shadowXOffset="1dp"-->
        <!--app:fab_shadowYOffset="3dp"-->
        <!--app:fab_size="normal"-->
        <!--app:fab_showAnimation="@anim/fab_scale_up"-->
        <!--app:fab_hideAnimation="@anim/fab_scale_down"-->
        <!--app:fab_label=""-->
        <!--app:fab_progress_color="#B07D4A"-->
        <!--app:fab_progress_backgroundColor="#B07D4A"-->
        <!--app:fab_progress_indeterminate="false"-->
        <!--app:fab_progress_max="100"-->
        <!--app:fab_progress="0"-->
        <!--app:fab_progress_showBackground="true"-->
        <!--android:layout_marginTop="10dp" />-->



</LinearLayout>
